2005-07-23 18:02 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormInspectorsManager.m: Remove extra revert: call.
	* GormLib/IBInspector.m: Touch changes the inspector X to the broken
	X, per specs.
	* Gorm.m:
	* Palettes/0Menus/main.m: Added to authors list.

2005-07-23 10:10 Gregory John Casamento <greg_casamento@yahoo.com>

	* Documentation/Makefile.postamble: Create documentation
	for GormCore, GormObjCHeaderParser and GormPrefs.

2005-07-21  fabien  <fabien@sonappart.net>

	* Palettes/0Menus/GormMenuInspectors.m : Corrects bug #13872 

2005-07-20 23:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSPanel.m
	* Palettes/1Windows/GormNSWindow.m: Reverted previous change.

2005-07-19 00:35 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSPanel.m
	* Palettes/1Windows/GormNSWindow.m: Removed override for
	orderWindow:... added sendEvent: to do the same thing, since 
	it's a little more generic.  This corrects bug#13838.

2005-07-18 23:54 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSPanel.m
	* Palettes/1Windows/GormNSWindow.m: Added override for 
	orderWindow:relativeTo: which causes selection of the window
	by Gorm, if the title bar is clicked.

2005-07-17 15:47 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Added code to prevent memory leak
	with previous change.

2005-07-17 15:08 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Removed AUTORELEASE for 
	subClassesArray, it was causing a crash.
	* GormCore/GormClassInspector.m: setObject: conditional which 
	prints a warning if a non-GormClassProxy class is passed in.
	* GormCore/GormPrivate.m: initWithClassName: conditional which
	prints a warning if a non-string is used to initialize th
	GormClassProxy.

2005-07-17 08:42 Gregory John Casamento <greg_casamento@yahoo.com>
