@@ -1,9 +1,16 @@
+2005-07-24 11:20 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Palettes/1Windows/GormNSPanel.m
+	* Palettes/1Windows/GormNSWindow.m: Readded override of
+	orderWindow:relativeTo:.  This corrects bug#13838.
+
 2005-07-23 18:02 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormCore/GormInspectorsManager.m: Remove extra revert: call.
 	* GormLib/IBInspector.m: Touch changes the inspector X to the broken
 	X, per specs.
-	* Gorm.m:
+	* Gorm.m: [Gorm testInterface] fix for menu disappearance when
+	testing the interface.
 	* Palettes/0Menus/main.m: Added to authors list.
 
 2005-07-23 10:10 Gregory John Casamento <greg_casamento@yahoo.com>
